--- a/login.html
+++ b/login.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/login.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/font.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
+  <link rel="stylesheet" href="./assets/css/login.css">
 
   <title>Food Recipe - Login</title>
 </head>
@@ -54,9 +54,9 @@
         </div>
       </div>
       <div class="auth col-sm-7 col-md-6">
-        <div class="auth-content w-100">
+        <div class="auth-content w-100 ff-inter">
           <h1 class="fs-4 fw-bold color-primary text-center">Welcome</h1>
-          <p class="text-secondary text-center mb-4">Log in into your existing account</p>
+          <h2 class="fs-6 text-secondary text-center mb-4">Log in into your existing account</h2>
           <!-- form -->
           <form>
             <div class="mb-3">
@@ -69,16 +69,16 @@
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="terms">
-              <label class="form-check-label text-small" for="terms">I agree to terms and conditions</label>
+              <label class="form-check-label" for="terms">I agree to terms and conditions</label>
             </div>
             <button type="submit" class="btn bg-primary w-100 text-light mb-2">Log in</button>
           </form>
-          <div class="d-flex justify-content-end mb-4">
-            <a class="link-secondary text-decoration-none text-small" href="#">
+          <div class="d-flex justify-content-end ff-airbnb">
+            <a class="text-small link-secondary text-decoration-none" href="#">
               Forgot Password?
             </a>
           </div>
-          <p class="text-center mb-10">
+          <p class="text-small text-center text-secondary mt-4 mb-10 ff-airbnb">
             Don't have an account?
             <a class="color-primary text-decoration-none" href="/register.html">Sign Up</a>
           </p>
@@ -89,9 +89,7 @@
   </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
 </body>
 
 </html>
