Update margin login & register

--- a/login.html
+++ b/login.html
@@ -113,11 +113,10 @@
               Forgot Password?
             </a>
           </div>
-          <p class="text-small text-center text-secondary mt-4 mb-over ff-airbnb">
+          <p class="text-small text-center text-secondary mt-4 ff-airbnb">
             Don't have an account?
             <a class="color-primary text-decoration-none" href="/register.html">Sign Up</a>
           </p>
-          <br>
         </div>
       </div>
     </div>
