--- a/register.html
+++ b/register.html
@@ -122,11 +122,10 @@
             </div>
             <button type="submit" class="btn bg-primary w-100 text-light mb-2">Log in</button>
           </form>
-          <p class="text-small text-center text-secondary mt-4 mb-over ff-airbnb">
+          <p class="text-small text-center text-secondary mt-4 ff-airbnb">
             Already have account?
             <a class="color-primary text-decoration-none" href="/login.html">Log in Here</a>
           </p>
-          <br>
         </div>
       </div>
     </div>
