Menyempurnakan sesuai keiginanku, aku benar-benar ingin menghapus sifat perfeksionis ini

--- a/login.html
+++ b/login.html
@@ -97,10 +97,16 @@
             <div class="mb-3">
               <label for="email" class="form-label">E-mail</label>
               <input type="email" class="form-control form-control-sm p-3" id="email" placeholder="E-mail">
+              <small style="color: #FF1818;">
+                Email tidak valid!
+              </small>
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
               <input type="password" class="form-control form-control-sm p-3" id="password" placeholder="Password">
+              <small style="color: #FF1818;">
+                Password terlalu lemah!
+              </small>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="terms">
@@ -117,7 +123,7 @@
             Don't have an account?
             <a class="color-primary text-decoration-none" href="/register.html">Sign Up</a>
           </p>
-          <br><br>
+          <br>
         </div>
       </div>
     </div>
