--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/font.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
-  <link rel="stylesheet" href="./assets/css/login.css">
+  <link rel="stylesheet" href="./assets/css/register.css">
 
   <title>Food Recipe - Register</title>
 </head>
@@ -97,24 +97,39 @@
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
               <input type="text" class="form-control form-control-sm p-3" id="name" placeholder="Name">
+              <small style="color: #FF1818;">
+                Email tidak valid!
+              </small>
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">E-mail</label>
               <input type="email" class="form-control form-control-sm p-3" id="email" placeholder="E-mail">
+              <small style="color: #FF1818;">
+                Email tidak valid!
+              </small>
             </div>
             <div class="mb-3">
               <label for="phone" class="form-label">Phone Number</label>
               <input type="text" class="form-control form-control-sm p-3" id="phone" placeholder="08XXXXXXXXXX">
+              <small style="color: #FF1818;">
+                Email tidak valid!
+              </small>
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Create New Password</label>
               <input type="password" class="form-control form-control-sm p-3" id="password"
                 placeholder="Create New Password">
+                <small style="color: #FF1818;">
+                  Email tidak valid!
+                </small>
             </div>
             <div class="mb-3">
               <label for="newPassword" class="form-label">New Password</label>
               <input type="password" class="form-control form-control-sm p-3" id="newPassword"
                 placeholder="New Password">
+                <small style="color: #FF1818;">
+                  Email tidak valid!
+                </small>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="terms">
@@ -126,11 +141,10 @@
             Already have account?
             <a class="color-primary text-decoration-none" href="/login.html">Log in Here</a>
           </p>
-          <br><br>
+          <br>
         </div>
       </div>
     </div>
-  </div>
   </div>
 
   <script src="./assets/js/bootstrap.min.js"></script>
