--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/font.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
-  <link rel="stylesheet" href="./assets/css/register.css">
+  <link rel="stylesheet" href="./assets/css/auth.css">
 
   <title>Food Recipe - Register</title>
 </head>
@@ -16,8 +16,8 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="hero col-sm-5 col-md-6 d-none d-sm-flex">
-        <div class="hero-content w-100">
+      <div class="hero col-sm-5 col-md-6 d-none d-sm-flex justify-content-center align-items-center position-relative vh-100">
+        <div class="hero-icon text-center w-100">
           <svg width="100" height="120" viewBox="0 0 182 224" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_59_22)">
               <path
@@ -53,9 +53,9 @@
           </svg>
         </div>
       </div>
-      <div class="auth col-sm-7 col-md-6">
+      <div class="auth register col-sm-7 col-md-6 d-flex justify-content-center">
         <div class="auth-content w-100 ff-inter">
-          <div class="text-center d-sm-none mb-4">
+          <div class="d-sm-none text-center mb-4">
             <svg width="80" height="105" viewBox="0 0 182 224" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_59_22)">
                 <path
@@ -96,25 +96,25 @@
           <form>
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control form-control-sm p-3" id="name" placeholder="Name">
+              <input type="text" class="form-control form-control-sm p-3" id="name" placeholder="Name" required>
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">E-mail</label>
-              <input type="email" class="form-control form-control-sm p-3" id="email" placeholder="E-mail">
+              <input type="email" class="form-control form-control-sm p-3" id="email" placeholder="E-mail" required>
             </div>
             <div class="mb-3">
               <label for="phone" class="form-label">Phone Number</label>
-              <input type="text" class="form-control form-control-sm p-3" id="phone" placeholder="08XXXXXXXXXX">
+              <input type="number" class="form-control form-control-sm p-3" id="phone" placeholder="08XXXXXXXXXX" required>
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Create New Password</label>
               <input type="password" class="form-control form-control-sm p-3" id="password"
-                placeholder="Create New Password">
+                placeholder="Create New Password" required>
             </div>
             <div class="mb-3">
               <label for="newPassword" class="form-label">New Password</label>
               <input type="password" class="form-control form-control-sm p-3" id="newPassword"
-                placeholder="New Password">
+                placeholder="New Password" required>
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="terms">
