Menyelesaikan hero untuk halaman landing

--- a/login.html
+++ b/login.html
@@ -106,7 +106,7 @@
               <input type="checkbox" class="form-check-input" id="terms">
               <label class="form-check-label" for="terms">I agree to terms and conditions</label>
             </div>
-            <button type="submit" class="btn bg-primary w-100 text-light mb-2">Log in</button>
+            <button type="submit" class="btn back-primary w-100 text-light mb-2">Log in</button>
           </form>
           <div class="d-flex justify-content-end ff-airbnb">
             <a class="text-small link-secondary text-decoration-none" href="#">
