--- a/register.html
+++ b/register.html
@@ -120,7 +120,7 @@
               <input type="checkbox" class="form-check-input" id="terms">
               <label class="form-check-label" for="terms">I agree to terms and conditions</label>
             </div>
-            <button type="submit" class="btn bg-primary w-100 text-light mb-2">Log in</button>
+            <button type="submit" class="btn back-primary w-100 text-light mb-2">Log in</button>
           </form>
           <p class="text-small text-center text-secondary mt-4 ff-airbnb">
             Already have account?
