--- a/index.html
+++ b/index.html
@@ -9,16 +9,53 @@
   <link rel="stylesheet" href="./assets/css/font.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
   <link rel="stylesheet" href="./assets/css/landing.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Food Recipe - Landing Page</title>
 </head>
 
 <body>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-9 bg-light">Manusia</div>
-      <div class="col-3 bg-warning">Api</div>
-    </div>
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-transparent py-4 ff-airbnb">
+      <a class="navbar-brand d-sm-none" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item me-5">
+            <a class="nav-link" href="#"><span class="active">Home</span></a>
+          </li>
+          <li class="nav-item me-5">
+            <a class="nav-link" href="#"><span class="">Add Recipe</span></a>
+          </li>
+          <li class="nav-item me-5">
+            <a class="nav-link" href="#"><span class="">Profile</span></a>
+          </li>
+        </ul>
+        <div class="right-menu d-flex align-items-center">
+          <div class="icon bg-light p-2 rounded-circle">
+            <i class="fas fa-user"></i>
+          </div>
+          <a class="ms-2 text-white" href="">Login</a>
+        </div>
+      </div>
+    </nav>
+    <section class="hero row">
+      <div class="hero-content col-9 d-flex flex-column justify-content-center ff-airbnb">
+        <h1 class="display-5 mb-3">Discover Recipe & Delicious Food</h1>
+        <div class="input-group input-group-sm">
+          <label class="input-group-text" for="searchInput"><i class="fas fa-search mx-2"></i></label>
+          <input type="search" class="form-control p-3" id="searchInput" placeholder="Search Restaurant, Food">
+        </div>
+      </div>
+      <div class="hero-decoration col-3 d-flex align-items-center back-primary">
+        <img src="./assets/img/landing-hero.webp" alt="">
+      </div>
+    </section>
   </div>
 
   <script src="./assets/js/bootstrap.min.js"></script>
