Menyelesaikan navbar dan section hero untuk halaman landing page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/font.css">
   <link rel="stylesheet" href="./assets/css/utility.css">
+  <link rel="stylesheet" href="./assets/css/navbar.css">
   <link rel="stylesheet" href="./assets/css/landing.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -18,46 +18,79 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-transparent py-4 ff-airbnb">
-      <a class="navbar-brand d-sm-none" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item me-5">
-            <a class="nav-link" href="#"><span class="active">Home</span></a>
-          </li>
-          <li class="nav-item me-5">
-            <a class="nav-link" href="#"><span class="">Add Recipe</span></a>
-          </li>
-          <li class="nav-item me-5">
-            <a class="nav-link" href="#"><span class="">Profile</span></a>
-          </li>
-        </ul>
-        <div class="right-menu d-flex align-items-center">
-          <div class="icon bg-light p-2 rounded-circle">
-            <i class="fas fa-user"></i>
+    <!-- navbar -->
+    <nav class="navbar fixed-top navbar-expand-md navbar-light bg-transparent py-3 ff-airbnb" id="navbar">
+      <div class="container">
+        <a class="navbar-brand d-md-none" href="#">
+          <img src="./assets/icon/logo-black.svg" width="45px" height="45px" alt="App Icon">
+          Food Recipe
+        </a>
+        <button class="navbar-toggler collapsed bg-light" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item me-5">
+              <a class="nav-link" href="#"><span class="active">Home</span></a>
+            </li>
+            <li class="nav-item me-5">
+              <a class="nav-link" href="#"><span>Add Recipe</span></a>
+            </li>
+            <li class="nav-item me-5">
+              <a class="nav-link" href="#"><span>Profile</span></a>
+            </li>
+          </ul>
+          <div class="right-menu d-flex align-items-center">
+            <div class="icon bg-light p-2 rounded-circle">
+              <i class="fas fa-user"></i>
+            </div>
+            <a class="ms-2 text-white" href="/login.html">Login</a>
           </div>
-          <a class="ms-2 text-white" href="">Login</a>
         </div>
       </div>
     </nav>
+    <!-- hero -->
     <section class="hero row">
-      <div class="hero-content col-9 d-flex flex-column justify-content-center ff-airbnb">
+      <div class="content col-10 col-sm-9 d-flex flex-column justify-content-center ff-airbnb">
         <h1 class="display-5 mb-3">Discover Recipe & Delicious Food</h1>
-        <div class="input-group input-group-sm">
-          <label class="input-group-text" for="searchInput"><i class="fas fa-search mx-2"></i></label>
+        <div class="search mb-3">
+          <label class="py-2 px-4" for="searchInput"><i class="fas fa-search"></i></label>
           <input type="search" class="form-control p-3" id="searchInput" placeholder="Search Restaurant, Food">
         </div>
       </div>
-      <div class="hero-decoration col-3 d-flex align-items-center back-primary">
-        <img src="./assets/img/landing-hero.webp" alt="">
+      <div class="decoration col-2 col-sm-3 d-flex align-items-center back-primary">
+        <img class="d-none d-md-block" src="./assets/img/landing-hero.webp" alt="Hero Image">
       </div>
     </section>
   </div>
 
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+  <br><br><br>
+
+  <script src="./assets/js/navbar.js"></script>
   <script src="./assets/js/bootstrap.min.js"></script>
 </body>
 
