--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </div>
   </nav>
 
-  <!-- hero -->
   <div class="container-fluid">
+    <!-- hero -->
     <section class="hero row">
       <div class="content col-10 col-sm-9 d-flex flex-column justify-content-center ff-airbnb">
         <h1 class="display-5 mb-3">Discover Recipe & Delicious Food</h1>
@@ -64,18 +64,39 @@
         <img class="d-none d-md-block" src="./assets/img/landing-hero.webp" alt="Hero Image">
       </div>
     </section>
-  </div>
 
-  <!-- suggestion -->
-  <div class="container">
-    <section class="suggestion ff-airbnb">
+    <!-- suggestion -->
+    <section class="suggestion ff-airbnb mb-10">
       <div class="title-section mb-5">
         <h1>Popular For You!</h1>
       </div>
-      <div class="content row">
+      <div class="row">
+        <div class="left col-12 col-lg-6">
+          <img src="./assets/img/landing-suggestion.webp" alt="Suggestion Image">
+          <div></div>
+        </div>
+        <div class="right col-12 col-lg-6">
+          <div>
+            <h1>Healthy Bone Broth Ramen (Quick & Easy)</h1>
+            <hr>
+            <p>
+              Quick + Easy Chicken Bone Broth Ramen- Healthy chicken ramen in a hurry? That’s right!
+            </p>
+            <a href="#" class="btn back-primary text-light" style="width: 150px;">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- new -->
+    <!-- <section class="new ff-airbnb mb-10">
+      <div class="title-section mb-5">
+        <h1>New Recipe</h1>
+      </div>
+      <div class="row">
         <div class="left col-7">
           <img src="./assets/img/landing-suggestion.webp" alt="Suggestion Image">
-          <div>.</div>
+          <div></div>
         </div>
         <div class="right col-5">
           <div>
@@ -84,40 +105,17 @@
             <p>
               Quick + Easy Chicken Bone Broth Ramen- Healthy chicken ramen in a hurry? That’s right!
             </p>
+            <a href="#" class="btn back-primary text-light" style="width: 150px;">Learn More</a>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   </div>
 
   <br><br><br>
   <br><br><br>
   <br><br><br>
   <br><br><br>
-
-  <!-- new -->
-  <div class="container">
-    <section class="new ff-airbnb">
-      <div class="title-section">
-        <h1>New Recipe</h1>
-      </div>
-    </section>
-  </div>
-
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-  <br><br><br>
-
-  <!-- popular -->
-  <div class="container">
-    <section class="popular ff-airbnb">
-      <div class="title-section">
-        <h1>Popular Recipe</h1>
-      </div>
-    </section>
-  </div>
-
   <br><br><br>
   <br><br><br>
   <br><br><br>
