Memperbaiki bug section suggesstion pada ukuran mobile

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
 
     <!-- suggestion -->
     <section class="suggestion ff-airbnb mb-10">
-      <div class="title-section mb-5">
+      <div class="title-section mb-4 mb-md-5">
         <h1>Popular For You!</h1>
       </div>
       <div class="row">
-        <div class="left col-12 col-lg-6">
+        <div class="left col-12 col-md-6">
           <img src="./assets/img/landing-suggestion.webp" alt="Suggestion Image">
           <div></div>
         </div>
-        <div class="right col-12 col-lg-6">
+        <div class="right col-12 col-md-6">
           <div>
             <h1>Healthy Bone Broth Ramen (Quick & Easy)</h1>
             <hr>
