Menyelesaikan section new beserta dengan responsivenya

--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
     </section>
 
     <!-- new -->
-    <!-- <section class="new ff-airbnb mb-10">
-      <div class="title-section mb-5">
+    <section class="new ff-airbnb mb-10">
+      <div class="title-section mb-4 mb-md-5">
         <h1>New Recipe</h1>
       </div>
       <div class="row">
-        <div class="left col-7">
-          <img src="./assets/img/landing-suggestion.webp" alt="Suggestion Image">
+        <div class="left col-12 col-md-6">
+          <img src="./assets/img/landing-new.webp" alt="New Recipe Image">
           <div></div>
         </div>
-        <div class="right col-5">
+        <div class="right col-12 col-md-6">
           <div>
             <h1>Healthy Bone Broth Ramen (Quick & Easy)</h1>
             <hr>
@@ -109,7 +109,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
   </div>
 
   <br><br><br>
