--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- navbar -->
-  <nav class="navbar fixed-top navbar-expand-md navbar-light bg-transparent py-3 ff-airbnb" id="navbar">
+  <nav class="navbar fixed-top navbar-expand-md navbar-light bg-transparent py-2 py-md-4 ff-airbnb" id="navbar">
     <div class="container">
       <a class="navbar-brand d-md-none" href="#">
         <img src="./assets/icon/logo-black.svg" width="45px" height="45px" alt="App Icon">
