Menyelesaikan section popular recipe beserta dengan responsivenya

--- a/index.html
+++ b/index.html
@@ -110,6 +110,53 @@
         </div>
       </div>
     </section>
+
+    <!-- populer -->
+    <section class="popular ff-airbnb mb-10">
+      <div class="title-section mb-4 mb-md-5">
+        <h1>Popular Recipe</h1>
+      </div>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card align-items-center">
+              <p class="title">Chicken <br> Kare</p>
+              <img src="./assets/img/popular-1.webp" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card align-items-center">
+              <p class="title">Bomb <br> Chicken</p>
+              <img src="./assets/img/popular-2.webp" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card align-items-center">
+              <p class="title">Banana <br> Smothie Pop</p>
+              <img src="./assets/img/popular-3.webp" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card align-items-center">
+              <p class="title">Coffe Lava <br> Cake</p>
+              <img src="./assets/img/popular-4.webp" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card align-items-center">
+              <p class="title">Sugar <br> Salmon</p>
+              <img src="./assets/img/popular-5.webp" class="card-img-top" alt="...">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card align-items-center">
+              <p class="title">Indian <br> Salad</p>
+              <img src="./assets/img/popular-6.webp" class="card-img-top" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <br><br><br>
